[package]
name = "marine-it-parser"
description = "Fluence Marine interface types parser"
version = "0.12.1"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_it_parser"
path = "src/lib.rs"

[dependencies]
marine-it-interfaces = { path = "../it-interfaces", version = "0.8.1" }
marine-module-interface = { path = "../module-interface", version = "0.7.1" }
marine-wasm-backend-traits = { path = "../wasm-backend-traits", version = "0.2.1"}

anyhow = "1.0.66"
walrus = "0.19.0"
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
nom = "7.1"

itertools = "0.10.5"
semver = "1.0.14"
serde = "1.0.147"
thiserror = "1.0.37"
