[package]
name = "marine-it-parser"
description = "Fluence Marine interface types parser"
version = "0.15.0"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_it_parser"
path = "src/lib.rs"

[dependencies]
marine-it-interfaces = { path = "../it-interfaces", version = "0.9.0" }
marine-module-interface = { path = "../module-interface", version = "0.8.0" }
marine-wasm-backend-traits = { path = "../wasm-backend-traits", version = "0.5.0" }

anyhow = "1.0.75"
walrus = "0.20.1"
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.27.0" }
nom = "7.1"

itertools = "0.10.5"
semver = "1.0.20"
serde = "1.0.147"
thiserror = "1.0.50"
