[package]
name = "marine-js-backend"
version = "0.1.0"
edition = "2021"
description = "Fluence Marine Wasm backend interface implementation for JS environment"
authors = ["Fluence Labs"]
license = "Apache-2.0"

[dependencies]
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.2.1"}
it-memory-traits = "0.4.0"

wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console"] }
anyhow = "1.0.70"
paste = "1.0.12"
maplit = "1.0.2"
log = "0.4.17"
walrus = "0.19.0"
