[package]
name = "marine-js-backend"
version = "0.3.1"
edition = "2021"
description = "Fluence Marine Wasm backend interface implementation for JS environment"
authors = ["Fluence Labs"]
license = "Apache-2.0"

[dependencies]
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.5.0" }
it-memory-traits = "0.4.0"

wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console"] }
anyhow = "1.0.75"
paste = "1.0.14"
maplit = "1.0.2"
log = "0.4.20"
typed-index-collections = "3.1.0"
derive_more = "0.99.17"
wasmparser = "0.110.0"
