[package]
name = "marine-wasmtime-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.1.0"}
it-memory-traits = "0.3.1"

wasmtime = "2.0.1"
wasmtime-wasi = "2.0.1"
wasmparser = "0.93.0"
multimap = "0.8.3"