[package]
name = "marine-wasmtime-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.1.0"}
wasmer-it = { workspace = true }
it-memory-traits = { workspace = true }

# all default features except async
wasmtime = {version = "3.0.1", default-features = false, features = ["cache", "wat", "jitdump", "parallel-compilation", "cranelift", "pooling-allocator", "vtune"]}
wasmtime-wasi = "3.0.1"
wasmparser = "0.96.0"
multimap = "0.8.3"