[package]
name = "marine-min-it-version"
version = "0.2.0"
description = "Fluence Marine interface types minimum supported version checker"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = { workspace = true }

[lib]
name = "marine_min_it_version"
path = "src/lib.rs"

[dependencies]
once_cell = "1.14.0"
semver = "1.0.13"
