[package]
name = "marine-min-it-version"
version = "0.3.1"
description = "Fluence Marine interface types minimum supported version checker"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_min_it_version"
path = "src/lib.rs"

[dependencies]
once_cell = "1.16.0"
semver = "1.0.20"
