[package]
name = "marine-module-info-parser"
description = "Fluence Marine Wasm module info (manifest and version) parser"
version = "0.9.0"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_module_info_parser"
path = "src/lib.rs"

[dependencies]
marine-rs-sdk-main = {version = "0.9.0", git = "https://github.com/fluencelabs/marine-rs-sdk", branch = "feat/decouple-call-params", default-features = false }

marine-wasm-backend-traits = { path = "../wasm-backend-traits", version = "0.3.0"}

anyhow = "1.0.71"
chrono = "0.4.26"
walrus = "0.20.1"
semver = "1.0.14"

serde = "1.0.147"
thiserror = "1.0.37"
