[package]
name = "marine-module-info-parser"
description = "Fluence Marine Wasm module info (manifest and version) parser"
version = "0.16.0"
authors = ["Fluence DAO, Clouldless Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "marine_module_info_parser"
path = "src/lib.rs"

[dependencies]
marine-rs-sdk-main = { version = "0.14.0", default-features = false }

marine-wasm-backend-traits = { path = "../wasm-backend-traits", version = "0.7.0" }

anyhow = "1.0.75"
chrono = "0.4.31"
walrus = "0.20.1"
semver = "1.0.20"
derivative = "2.2.0"
serde = "1.0.147"
thiserror = "1.0.50"
