[package]
name = "marine-module-interface"
description = "Fluence Marine module interface"
version = "0.6.1"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_module_interface"
path = "src/lib.rs"

[dependencies]
marine-it-interfaces = { path = "../it-interfaces", version = "0.7.3" }

anyhow = "1.0.66"
walrus = "0.19.0"
wasmer-it = { workspace = true, default-features = false }
nom = "5.1"

itertools = "0.10.5"
semver = "1.0.14"
serde = "1.0.147"
thiserror = "1.0.37"
