[package]
name = "marine-module-interface"
description = "Fluence Marine module interface"
version = "0.7.1"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "marine_module_interface"
path = "src/lib.rs"

[dependencies]
marine-it-interfaces = { path = "../it-interfaces", version = "0.8.1" }

anyhow = "1.0.66"
walrus = "0.19.0"
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
nom = "7.1.3"

itertools = "0.10.5"
semver = "1.0.14"
serde = "1.0.147"
thiserror = "1.0.37"
