[package]
name = "marine-module-interface"
description = "Fluence Marine module interface"
version = "0.9.0"
authors = ["Fluence DAO, Clouldless Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "marine_module_interface"
path = "src/lib.rs"

[dependencies]
marine-it-interfaces = { path = "../it-interfaces", version = "0.10.0" }

anyhow = "1.0.75"
walrus = "0.20.1"
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.28.0" }
nom = "7.1.3"

itertools = "0.10.5"
semver = "1.0.20"
serde = "1.0.147"
thiserror = "1.0.50"
