[package]
name = "marine-wasm-backend-traits"
description = "Fluence Marine generic Wasm backend interface"
version = "0.2.1"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
it-memory-traits = "0.4.0"

thiserror = "1.0.24"
anyhow = "1.0.68"
wasmparser = "0.101.1"
paste = "1.0.9"
multimap = "0.8.3"
