[package]
name = "marine-wasm-backend-traits"
description = "Fluence Marine generic Wasm backend interface"
version = "0.3.0"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
it-memory-traits = "0.4.0"

indexmap = "2.0.2"
thiserror = "1.0.24"
anyhow = "1.0.71"
wasmparser = "0.101.1"
paste = "1.0.13"
multimap = "0.8.3"
