[package]
name = "marine-wasm-backend-traits"
description = "Fluence Marine generic Wasm backend interface"
version = "0.7.0"
authors = ["Fluence DAO, Clouldless Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.28.0" }
it-memory-traits = "0.5.0"

thiserror = "1.0.50"
anyhow = "1.0.75"
wasmparser = "0.101.1"
paste = "1.0.14"
multimap = "0.8.3"
futures = "0.3.29"
