[package]
name = "marine-wasmer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.1.0"}


wasmer-it = { workspace = true}
it-memory-traits = { workspace = true }
wasmer-wasi = { version = "3.1.0"}
wasmer = { version = "3.1.0" }
wasmparser = "0.96.0"
multimap = "0.8.3"
paste = "1.0.11"
anyhow = "1.0.68"
