[package]
name = "marine-wasmtime-backend"
description = "Fluence Marine Wasm backend interface implementation for Wasmtime"
version = "0.3.0"
edition = "2021"
authors = ["Fluence Labs"]
license = "Apache-2.0"

[dependencies]
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.3.0"}
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.26.1" }
it-memory-traits = "0.4.0"

# all default features except async
wasmtime = {version = "6.0.1", default-features = false, features = ["cache", "wat", "jitdump", "parallel-compilation", "cranelift", "pooling-allocator", "vtune"]}
wasmtime-wasi = "6.0.1"
multimap = "0.8.3"
paste = "1.0.13"
anyhow = "1.0.71"
log = "0.4.19"
tracing = "0.1.37"