[package]
name = "marine-wasmtime-backend"
description = "Fluence Marine Wasm backend interface implementation for Wasmtime"
version = "0.7.0"
edition = "2021"
authors = ["Fluence DAO, Clouldless Labs"]
repository = "https://github.com/fluencelabs/marine"
license = "AGPL-3.0-only"

[dependencies]
marine-wasm-backend-traits = {path = "../wasm-backend-traits", version = "0.7.0" }
wasmer-it = { package = "wasmer-interface-types-fl", version = "0.28.0" }
it-memory-traits = "0.5.0"

# all default features except async
wasmtime = {version = "13.0.0", default-features = false, features = ["cache", "wat", "jitdump", "parallel-compilation", "cranelift", "pooling-allocator", "vtune"]}
wasmtime-wasi = "13.0.0"
multimap = "0.8.3"
paste = "1.0.14"
anyhow = "1.0.75"
log = "0.4.20"
futures = "0.3.29"
