[package]
name = "marine-wit-generator"
description = "Fluence Marine interface types generator"
version = "0.4.0"
authors = ["Fluence Labs"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "marine_wit_generator"
path = "src/lib.rs"

[dependencies]
marine-wit-parser = { path = "../wit-parser", version = "0.5.0"}
fluence-sdk-wit = "0.6.1"

wasmer-wit = { package = "wasmer-interface-types-fl", version = "0.20.0" }
it-lilo = "0.1.0"

thiserror = "1.0.24"
walrus = "0.18.0"
once_cell = "1.4.0"
serde = { version = "=1.0.118", features = ["derive"] }
serde_json = "1.0.56"
cargo_toml = "0.8.1"
